# evo-memory

./: .env.example  .gitattributes  .gitignore  .hf_cache  CHANGES.md  CLAUDE.md  MEMORY_AUDIT.md  Makefile  README.md  README_LORA_NAMM.md  README_NLS.md  README_namm_cache_sweep.md  README_run.md  SECTION_C_PLAN.md  SECTION_C_REPORT.md  SETUP_NOTES.md  TPU_PORT.md  activate.sh  align_docs_with_paper_prompt.md  analysis_specification.md  bug.md  check_qasper.py  claude_code_config_review.md  claude_code_experiment_audit.md  claude_code_figures_prompt.md  claude_code_memory_audit.md  claude_code_naming_cleanup.md  claude_code_namm_oom.md  claude_code_remaining_work.md  compare_outputs.py  env_minimal_th3.yaml  env_namm.yaml  environment.yaml  environment_conda_freeze.yaml  eval_commands_ablations.sh  experiment_specification.md  experiments_instructions.md  grad_lora_es_merge_plan.md  implement_h2o_scissorhands.md  investigate-green-run-gap.md  (+29 more)
.claude/rules/: eval.md  namm.md  training.md
.planning/: ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
LongBench/config/: model2maxlen.json  model2path.json
analysis/: _meta-analysis.md  _summary_report.md  generate_data_4_5_7.py  generate_data_6_8_9.py  meta-analysis.md  regenerate_reports_1_3_plots.py  run_gpu_analyses.py  run_maskfix_gpu_analyses.py  run_maskfix_namm_analyses.py  summary_report.md
analysis/report_0/: _report.md  analyse_datasets.py  generate_plots.py  relevant_tokens_data.json
analysis/report_1/: _report.md  generate_plots.py  generate_plots_v2.py  report.md  results.json  results_test.json
analysis/report_10/: _report.md  generate_plots.py  results.json
analysis/report_2/: _report.md  generate_plots.py  report.md
analysis/report_3/: _report.md  _report_maskfix.md  generate_plots.py  report.md
analysis/report_4/: _report.md  _report_maskfix.md  generate_plots.py  maskfix_data.npz
analysis/report_5/: _report.md  _report_maskfix.md  attention_data.npz  generate_plots.py  maskfix_data.npz
analysis/report_6/: _report.md  _report_maskfix.md  alignment_data.json  generate_plots.py  report.md
analysis/report_7/: _report.md  _report_maskfix.md  cka_data.npz  generate_plots.py  maskfix_data.npz  report.md
analysis/report_8/: _report.md  generate_plots.py  maskfix_probe_data.npz  probe_data.npz
analysis/report_9/: _report.md  _report_maskfix.md  generate_plots.py  gradient_data.json  maskfix_gradient_data.json
analysis_giacomo/: SUMMARY.md
analysis_out/: critical_review_colleague_report.md  distribution_shift_analysis.md
cfgs/: config.yaml
checkpoints_backup/: README.md
config/: config.yaml  config_run_eval.yaml
docs/: compute_budget_validation.md  config_code_audit.md  config_comparison_matrix.md  config_key_trace.md  efficiency_audit_checklist.md  es-ft-guide.md  es-ft-namm-guide.md  examples.md  experiment_config_audit.md  experiment_critical_review.md  experiment_recommendations.md  lora-grad-ft-namm.md  lora-grad-ft.md  m1_recency_investigation.md  m3_rerun_plan.md  m4_joint_training_analysis.md  m4_readiness_review.md  metric_investigation.md  naming_mapping.md  naming_rename_inventory.md  namm-guide.md  namm_memory_investigation.md  notes.md  paper_readiness_gaps.md  tmux_cmd.md  to_do_list.md  tpu_notes.md
es_finetuning/: __init__.py  bucketing.py  config.py  device.py  gcs.py  noise.py  population.py  preemption.py  tpu_guardrails.py  trainer.py  utils.py
evaluation/: evaluator.py  task_sampler.py
evolution/: cma_es.py
examples/: cross_evaluate.py  evaluate_buffer.py  launch_cross_eval.sh  maze_plr.py
grad_lora_finetuning/: __init__.py  datasets.py  trainer.py
memory_evolution/: base.py  cma_es.py
memory_llms/: base.py  llama.py
memory_policy/: base.py  base_deep_components.py  deep.py  deep_embedding_shared.py  deep_embedding_spectogram.py  deep_selection.py
metrics/: choubun.py
models/: base.py  llama.py
namm/: __init__.py  evaluator.py  run_utils.py  tasks.py  trainer.py
namm/llms/: base.py  (+2 more)
ops/: attention.py  base.py  mlp.py
policy/: __init__.py  base.py  base_dynamic.py  components.py  deep.py  selection.py
scripts/: _claude_analyze_retention_vs_answers.py  _claude_case_study_v2.sh  _claude_case_study_viz.sh  _claude_check_maskfix_attention.sh  _claude_dispatch_eval.sh  _claude_dump_retention.sh  _claude_eval_bs1.sh  _claude_eval_m4fix_deterministic.sh  _claude_eval_m4fix_v2.sh  _claude_eval_m4fix_val.sh  _claude_eval_status.sh  _claude_launch.sh  _claude_launch_ghost.sh  _claude_launch_hidden_shift.sh  _claude_launch_maskfix_analyses.sh  _claude_launch_ntp.sh  _claude_launch_repr_analysis.sh  activate.sh  analyze_mask_drift.py  archive_experiment.py  case_study_visualization.py  case_study_visualization_v2.py  check_eviction_stats.py  cleanup_checkpoints.py  diagnose_attention_mask.py  download_artifacts.py  es_default.yaml  es_m1_only.yaml  eval_default.yaml  eval_namm_splits.py  eval_ntp_perplexity.py  eval_plain_llama.py  eviction_representation_analysis.py  experiment_utils.py  generate_comparison_plots.py  generate_paper_figures.py  generate_report.py  generate_run_plots.py  generate_test_comparison_plots.py  ghost_information_analysis.py  (+37 more)
setup/: _lib.sh  activate.csh  activate.sh  activate_tpu.sh  setup.sh  setup_cmd.sh  setup_tpu.sh  setup_tpu_cmd.sh  tpu_restart.sh
stateless_parallel_modules/: attention.py  base.py
tests/: test_es_bucketing.py  test_es_population.py  test_gcs_pretrained.py  test_h2o.py  test_lora_grad_trainer.py  test_lora_seam.py  test_recency_swap.py  test_scissorhands.py  test_tpu_guardrails.py
training/: lora_trainer.py  namm_trainer.py
utils/: __init__.py  core.py  experiment.py  helpers.py  hydra.py  hydra_helpers.py  log.py  longbench.py  longbench_metrics.py
vae/: cenie_scorer.py  cmaes_manager.py  compare_accel_vs_cmaes.ipynb  compare_accel_vs_cmaes.py  latent_perturbation_diagnostic.py  requirements.txt  vae_level_utils.py  vae_model.py
(+540 files in other folders)
