# =============================================================================
# evo-memory
#
# Fine-tuning LLaMA 3.2-1B-Instruct via evolutionary strategies (ES) or LoRA
# while NAMM manages the KV cache.
#
# Install:
#   uv sync --extra gpu              # CUDA 12.1 GPU
#   uv sync --extra cpu              # CPU only
#   uv sync --extra tpu              # Google Cloud TPU VM
#   uv sync --extra gpu --extra dev  # add dev tools (ruff, pytest)
#
# Requires: python 3.10+, uv (https://docs.astral.sh/uv/)
# =============================================================================

[project]
name = "evo-memory"
version = "0.1.0"
description = "Fine-tuning LLaMA 3.2-1B-Instruct via ES or LoRA with NAMM KV-cache management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mathis Weil" }]

# ── Shared dependencies ─────────────────────────────────────────────────────
# Everything EXCEPT PyTorch, which varies by hardware and is resolved via the
# `[tool.uv.sources]` + `[[tool.uv.index]]` blocks below per selected extra.
# ─────────────────────────────────────────────────────────────────────────────
dependencies = [
    # Core ML
    # CRITICAL: transformers must stay on 4.41.x — 4.45+ breaks DynamicCache
    # API, cache_position handling, and causal-mask construction used by the
    # custom LlamaModel patches.
    "numpy<2",
    "transformers==4.41.2",
    "accelerate",
    "datasets==2.20.0",
    "peft==0.11.1",
    # Tokenisation (kept for HF tokenizer runtime fallbacks on LLaMA)
    "tiktoken",
    "sentencepiece",
    # Evaluation
    "lm-eval==0.4.2",
    "rouge",
    "jieba",
    "fuzzywuzzy",
    "python-levenshtein",
    # Config / experiment tracking
    "hydra-core==1.3.2",
    "wandb",
    "pandas==2.2.2",
    "tqdm",
    # Cloud storage
    "google-cloud-storage",
    "matplotlib>=3.10.8",
]

# ── Platform-specific extras ─────────────────────────────────────────────────
# Declare the torch variant per platform. `[tool.uv.sources]` below routes the
# `gpu` extra to the CUDA 12.1 PyTorch index; `cpu` resolves from default PyPI
# and `tpu` pulls `torch-xla[tpu]` from its own declared find-links.
# ─────────────────────────────────────────────────────────────────────────────
[project.optional-dependencies]
gpu = [
    "torch==2.3.1",
]
tpu = [
    "torch==2.3.1",
    "torch-xla[tpu]",
]
cpu = [
    "torch==2.3.1",
]
dev = [
    "ruff",
    "pytest",
]

# ── uv source routing ────────────────────────────────────────────────────────
# Route torch to the correct PyTorch wheel index per active extra:
#   gpu → CUDA 12.1 wheels (~2 GB, includes nvcc runtime libs)
#   cpu → CPU-only wheels  (~180 MB, no CUDA runtime)
#   tpu → default PyPI torch + torch-xla[tpu] (handled by torch-xla's own deps)
# ─────────────────────────────────────────────────────────────────────────────
[tool.uv]
# gpu / cpu / tpu are mutually exclusive — declaring the conflict lets uv
# resolve and lock a separate torch variant per extra instead of collapsing
# onto a single universal resolution.
conflicts = [
    [
        { extra = "gpu" },
        { extra = "cpu" },
        { extra = "tpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "extra == 'gpu'" },
    { index = "pytorch-cpu",   marker = "extra == 'cpu' and extra != 'gpu'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# ── Build system ─────────────────────────────────────────────────────────────
# Enables `pip install -e .` so namm/, grad_lora_finetuning/, etc. are importable.
# ─────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["namm*", "grad_lora_finetuning*", "es_finetuning*", "experiment_utils*", "utils*"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
